<resources>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_feedback">Mulai</string>
    <string name="bergerak">Pergerakan :</string>

    <string name="app_name">AppRental</string>
    <string name="nama_app">twoh.co</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppRental</string>
    <string name="barang_hint">Nama Mobil</string>
    <string name="harga_hint">Stok Mobil</string>
    <string name="stok_hint">Biaya Mobil</string>
    <string name="tombol_submit">Submit</string>
    <string name="tombol_tambah">Tambah Data</string>
    <string name="tombol_lihat">Lihat Data</string>
    <string name="tombol_edit">Save</string>
    <string name="tombol_cancel">Cancel</string>
    <string name="tombol_dialog_edit">Edit</string>
    <string name="tombol_dialog_delete">Delete</string>
    <string name="title_view">Data Mobil</string>
    <string name="title_edit">Edit Mobil</string>
    <string name="title_activity_login">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="dataabout">
        "\n"
        "Selamat datang di App Mobil\n"
    </string>

</resources>